# RAIL

./: .gitignore  LICENSE  README.md
ConvertedProjectExample/AgentTest/: AgentTest.csproj  AgentTest.sln  App.xaml  App.xaml.cs  AssemblyInfo.cs  MainWindow.xaml  MainWindow.xaml.cs
ConvertedProjectExample/WorkflowDemo/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WorkflowDemo.csproj  WorkflowDemo.sln  nuget.config
ConvertedProjectExample/chocolate-doom-master/: CMakeLists.txt  CODE_OF_CONDUCT.md  HACKING.md  NEWS.md  NOT-BUGS.md  PHILOSOPHY.md  README.Music.md  README.Strife.md  README.md  RELEASE_NOTES.md  TODO.md  config_doom.bat  setup_doom_deps.ps1  vcpkg.json
ConvertedProjectExample/notepad-plus-plus-master/: build-Agentic.bat
Docs/: KNOWN_ISSUES.md  PROJECT_ARCHITECTURE.md  ROADMAP.md  SECURITY.md
RailBridge.Native/: BridgeState.cs  Exports.cs  JsonContext.cs  RailBridge.Native.csproj
RailOrchestrator/: App.xaml  App.xaml.cs  AssemblyInfo.cs  MainWindow.xaml  MainWindow.xaml.cs  RailOrchestrator.csproj  RailOrchestrator.sln  models.json
RailOrchestrator/Converters/: BoolToColorConverter.cs
RailOrchestrator/Data/: DatabaseService.cs
RailOrchestrator/Models/: GeminiModels.cs  Models.cs
RailOrchestrator/Services/: AssetService.cs  AudioRecorderService.cs  FunctionNameEncoder.cs  GeminiService.cs  LLMService.cs  Logger.cs  PdfService.cs  RagService.cs  SettingsService.cs  TextToSpeechService.cs
RailOrchestrator/ViewModels/: HomeViewModel.cs  MainViewModel.cs  RelayCommand.cs  SettingsViewModel.cs  ViewModelBase.cs
RailOrchestrator/Views/: DataPreviewWindow.xaml  DataPreviewWindow.xaml.cs  HomeView.xaml  HomeView.xaml.cs  MiniPromptWindow.xaml  MiniPromptWindow.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs
RailSDK/: README.md  RailSDK.sln  requirements.txt  runtime_plugins.json
RailSDK-Cpp/: CMakeLists.txt  build_x64.bat  build_x86.bat
RailSDK-Cpp/cmake/: RailSDKConfig.cmake
RailSDK-Cpp/examples/: RailBinding.cpp  hello_world.cpp  hello_world_rttr.cpp  hello_world_v2.cpp  rail.manifest.json
RailSDK-Cpp/examples/legacy_code/: OrderManager.h
RailSDK-Cpp/include/rail/: rail.h
RailSDK-Cpp/src/: dispatcher.cpp  instance_registry.cpp  instance_registry.h  manifest_generator.cpp  rail.cpp
RailSDK-Cpp/tools/: liquid_bindgen.py
RailSDK-Node/: README.md  package.json  tsconfig.json
RailSDK-Node/src/: bridge.ts  core.ts  discovery.ts  index.ts  types.ts  version.ts
RailSDK-Python/: README.md  pyproject.toml
RailSDK-Python/rail/: __init__.py  bridge.py  core.py  discovery.py  types.py  version.py
RailSDK.Universal/: ManifestGenerator.cs  NativeBridge.cs  RailEngine.cs  RailSDK.Universal.csproj  RailSDK.Universal.sln
RailSDK/RailFactory.Core/: AssemblyClassifier.cs  CompositeManifest.cs  DependencyAnalyzer.cs  DeterministicHash.cs  EmbeddedResourceExtractor.cs  FunctionNameEncoder.cs  IRuntimeInterfaces.cs  ITransportClient.cs  ModuleInstance.cs  ModuleRegistry.cs  PACKAGE_GUIDE.md  PathNormalizer.cs  RailEngine.cs  RailFactory.Core.csproj  RailIpcServer.cs  RailModels.cs  RuntimeExecutors.cs  RuntimeRegistry.cs  RuntimeScanners.cs  RuntimeType.cs  RuntimeTypeExtensions.cs  ScanOptions.cs  SingleInstanceManager.cs  SolutionScanner.cs  build_output.txt  errors.txt
RailStudio/: RailStudio.sln
(+817 files in other folders)
